# sudani_lm

./: .gitignore  README.md  pyproject.toml  train.py
configs/: init_config.yaml  pretraining.yaml
configs/pretraining/: config.yaml  dummy.yaml  init_config.yaml  new_config.yaml
data/src/preprocessing/: arabic.py
data/src/tokenizer/: utils.py
src/: evaluator.py  factory.py  generator.py  trainer.py
src/data_preprocessing/: arabic.py
src/dataset/: __init__.py  arabic.py  base.py  mmlu.py  utils.py
src/models/: decoder.py
src/tokenizer/: build_init_tokenizer.py
tokenizers/init_tokenizer/: tokenizer.json  tokenizer_config.json
